Enable uniform buffer for RHI compute shaders

This enables uniform buffers for all rendering stages
including the compute stage.

[ChangeLog] Enable uniform buffer for RHI compute shaders

Fixes: QTBUG-119659
Pick-to: 6.6 6.7
Change-Id: I7c83bc9bf33cef4b925b52b7f4d6cde79e7e62e3
Reviewed-by: Mike Krus <mike.krus@kdab.com>